# Clang-petlje

./: .gitignore  CMakeLists.txt  DoASTConsumer.hpp  LICENCE  README.md  petlje.cpp  predlozi.txt
TODO/: CMakeLists.txt  README.md
TODO/doc/: predlozi.txt
TODO/src/: ASTConsumers.cpp  ASTConsumers.hpp  DoASTConsumer.hpp  ForASTConsumer.hpp  WhileASTConsumer.hpp  petlje.cpp
doc/: Clang-petlje.tex  Clang.bib  Clang.tex  predlozi.txt
inc/: Do2ForConsumer.hpp  For2DoConsumer.hpp  For2WhileConsumer.hpp  Helpers.hpp  LoopConsumer.hpp  PrepForConsumer.hpp  While2DoConsumer.hpp  While2ForConsumer.hpp
include/: Do2ForConsumer.hpp  For2WhileConsumer.hpp  While2ForConsumer.hpp
src/: Do2ForConsumer.cpp  Do2ForConsumer.hpp  DoASTConsumer.cpp  DoASTConsumer.hpp  DoFromForASTConsumer.cpp  DoFromForASTConsumer.hpp  DoFromWhileASTConsumer.cpp  DoFromWhileASTConsumer.hpp  For2DoConsumer.cpp  For2DoConsumer.hpp  For2WhileConsumer.cpp  For2WhileConsumer.hpp  ForASTConsumer.cpp  ForASTConsumer.hpp  ForFromDoASTConsumer.cpp  ForFromDoASTConsumer.hpp  ForFromWhileASTConsumer.cpp  ForFromWhileASTConsumer.hpp  Helpers.cpp  Helpers.hpp  PrepForConsumer.cpp  PrepForConsumer.hpp  While2DoConsumer.cpp  While2DoConsumer.hpp  While2ForConsumer.cpp  While2ForConsumer.hpp  WhileASTConsumer.cpp  WhileASTConsumer.hpp  WhileFromDoASTConsumer.cpp  WhileFromDoASTConsumer.hpp  WhileFromForASTConsumer.cpp  WhileFromForASTConsumer.hpp  petlje.cpp
test/: prob_in.c  prob_while.c  samodo.c  samofor.c  samofor2.c  samowhile.c  samowhile2.c  whilefor.c
